--- a/styles.scss
+++ b/styles.scss
@@ -46,18 +46,22 @@ $font-family-sans-serif: 'Avenir', sans-serif;
 
 // some alignment classes
 
-.centered {
+.column-centered {
   display: flex;
   flex-direction: column;
   align-items: center;
   //text-align: center;
 }
 
+.shrunk-content-width {
+  width: 70%;
+  margin: 0 auto;
+}
 // size
 
 .medium-image{
-  min-width: 100px;
-  max-width: 100px;
+  min-width: 5%;
+  max-width: 15%;
   height: auto;
 }
 
