--- a/styles.scss
+++ b/styles.scss
@@ -51,19 +51,14 @@ $font-family-sans-serif: 'Avenir', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  //text-align: center;
+  text-align: center;
+  
+  margin-bottom: 1em !important;
 }
 
 .shrunk-content-width {
   width: 70%;
   margin: 0 auto;
-}
-// size
-
-.medium-image{
-  min-width: 5%;
-  max-width: 15%;
-  height: auto;
 }
 
 // navigation highlights
