--- a/styles.scss
+++ b/styles.scss
@@ -51,9 +51,13 @@ $font-family-sans-serif: 'Avenir', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  text-align: center !important;
   
   margin-bottom: 1em !important;
+}
+
+.quarto-layout-panel .quarto-figure{
+  text-align: center !important;
 }
 
 .shrunk-content-width {
